manifests/deployment.yml
apiVersion : apps/v1
kind: Deployment
metadata:
  name: "kstest-cd09"
spec:
  replicas: 2
  selector:
    matchLabels:
      app: "kstest-cd09"
  template:
    metadata:
      labels:
        app: "kstest-cd09"
    spec:
      containers:
        - name: "kstest-cd09"
          image: "testregistry5.azurecr.io/kstest"
          ports:
          - containerPort: 8080
